# rDNS

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  plan.md  rdns.toml.example
.github/workflows/: release.yml
bench/: queryfile.txt  rdns-bench.toml  run.sh  throughput.sh  unbound-bench.conf
bench/results/: rdns-10client.txt  rdns-1client.txt  rdns-50client.txt  unbound-10client.txt  unbound-1client.txt  unbound-50client.txt
bench/results/throughput/: rdns-100c.txt  rdns-200c.txt  rdns-500c.txt  rdns-50c.txt  unbound-100c.txt  unbound-200c.txt  unbound-500c.txt  unbound-50c.txt
docs/: 404.html  Gemfile  _config.yml  benchmarks.md  compare.md  docs.md  features.md  index.md  install.md  robots.txt  use-cases.md
docs/_data/: compare.yml
docs/_includes/: cta.html  footer.html  head-meta.html  nav.html
docs/_includes/jsonld/: faqpage.html  software-application.html
docs/_layouts/: default.html  page.html
docs/_sass/: _base.scss  _components.scss  _hero.scss  _nav.scss  _theme.scss  _typography.scss  _utilities.scss
docs/assets/: og-template.html
docs/assets/css/: main.scss
docs/assets/js/: main.js
docs/superpowers/plans/: 2026-05-11-rdns-gh-pages-site.md
freebsd/: build-local.sh  release.sh
migrations/: 20260330115614_initial_schema.sql
src/: config.rs  fasthash.rs  main.rs  metrics.rs  server.rs  single_instance.rs
src/auth/: catalog.rs  database.rs  engine.rs  mod.rs  zone.rs  zone_parser.rs  zone_tree.rs
src/cache/: entry.rs  fast_store.rs  mod.rs  store.rs
src/control/: handler.rs  mod.rs
src/dnssec/: algorithms.rs  mod.rs  trust_anchor.rs  validator.rs
src/listener/: mod.rs  tcp.rs  tls.rs  udp.rs  udp_batch.rs
src/protocol/: edns.rs  header.rs  message.rs  mod.rs  name.rs  opcode.rs  rcode.rs  rdata.rs  record.rs
src/resolver/: forwarder.rs  iterator.rs  mod.rs  recursive.rs
src/rpz/: engine.rs  events.rs  mod.rs  policy.rs
src/security/: acl.rs  mod.rs  privilege.rs  rate_limit.rs  sandbox.rs
zones/: example.com.zone
(+1 files in other folders)
