[package]
name = "rdns"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A high-performance, security-focused DNS server written in Rust"
authors = []

[[bin]]
name = "rdns"
path = "src/main.rs"

[[bin]]
name = "rdns-control"
path = "src/bin/rdns_control.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
dashmap = "6"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
postgres = ["dep:sqlx"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "postgres"]
optional = true
