[package]
name = "rdns"
version = "1.12.14"
edition = "2024"
license = "MIT"
description = "A high-performance, security-focused DNS server written in Rust"
authors = []

[[bin]]
name = "rdns"
path = "src/main.rs"

[[bin]]
name = "rdns-control"
path = "src/bin/rdns_control.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
dashmap = "6"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = { version = "1.14", features = ["std"] }
libc = "0.2"
parking_lot = "0.12"
nix = { version = "0.29", features = ["socket", "uio", "net", "user", "process", "fs"] }
socket2 = { version = "0.5", features = ["all"] }
getrandom = "0.2"
arc-swap = "1"
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
postgres = ["dep:sqlx"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio-rustls", "postgres"]
optional = true
